# Calculator

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Calculator/: Calculator.csproj  Form1.Designer.cs  Form1.cs  Form1.resx
CalculatorLib/: CMakeLists.txt
CalculatorLib/include/: calculator.h  utils.h
CalculatorLib/src/: calculator.cpp  utils.cpp
Tests/: CMakeLists.txt  calc_unit_tests.cpp
main/: CMakeLists.txt  main.cpp
